--- a/css/room.css
+++ b/css/room.css
@@ -4,24 +4,33 @@
 
 
 .section {
-    width: 100%;
+    width: 1440px;
     height: 100%;
     overflow: hidden;
+    margin: auto;
+    position: relative;
 }
 
 /* view */
 .view {
-    width: 80%;
+    width: 100%;
     height: 100vh;
     /* background-color: skyblue; */
     position: relative;
     background-image: url("../pic/background.jpg");
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100% 100%;
     /* overflow: hidden; */
     margin: auto;
 }
 
+/* footer */
+.footer {
+    height: 15%;
+    /* background-color: rgba(253, 101, 101, 0.644); */
+    position: absolute;
+    bottom: 0;
+}
 
 /* role */
 .role {
@@ -31,12 +40,13 @@
     border-radius: 50%; */
     position: absolute;
     transition: .3s;
+    top: -85px;
 }
 
 .role-name {
     width: 100px;
     position: absolute;
-    bottom: -25px;
+    bottom: -20px;
     background-color: black;
     color: #fff;
     left: 0%;
@@ -56,7 +66,7 @@
 .chat-cloud {
     position: absolute;
     /* top: -80px; */
-    right: -15%;
+    right: -13%;
     width: 100px;
     background-color: #fff;
     border-radius: 5px;
@@ -85,6 +95,7 @@
 /* 聊天輸入區 */
 .chat {
     width: 75%;
+    max-width: 1200px;
     position: absolute;
     bottom: 10px;
     display: flex;
@@ -93,10 +104,22 @@
     right: 12%;
 }
 
-/* 通知 */
-.notify{
+.chat-record {
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 100%;
     position: absolute;
-    bottom:50px ;
-    left: 90%;
+    top: -79px;
+    height: 80px;
+}
+
+.chat-record li {
     color: #fff;
+}
+
+/* 通知 */
+.notify {
+    position: absolute;
+    bottom: 5px;
+    left: 90%;
+    color: red;
 }
