--- a/css/room.css
+++ b/css/room.css
@@ -1,10 +1,5 @@
-* {
-    list-style: none;
-}
-
-
 .section {
-    width: 1440px;
+    width: 100%;
     height: 100%;
     overflow: hidden;
     margin: auto;
@@ -108,11 +103,13 @@
     background-color: rgba(0, 0, 0, 0.5);
     width: 100%;
     position: absolute;
-    top: -79px;
-    height: 80px;
+    top: -94px;
+    height: 95px;
+    overflow-y: auto;
 }
 
 .chat-record li {
+    height: 20px;
     color: #fff;
 }
 
@@ -121,5 +118,5 @@
     position: absolute;
     bottom: 5px;
     left: 90%;
-    color: red;
+    color: #fff;
 }
